--- a/blogs.html
+++ b/blogs.html
@@ -20,9 +20,9 @@
   <body>
     <!-- --------------------------------------------- NAVBAR START --------------------------------------------- -->
 
-    <nav id="navbar">
+    <nav id="navbar" class="blogs-navbar">
       <a href="#" class="logo">
-        <img src="./assets/vector/logo.svg" alt="logo" />
+        <img class="w-1366-88" src="./assets/vector/logo.svg" alt="logo" />
       </a>
 
       <div class="nav">
@@ -47,8 +47,8 @@
       <section id="blogs" class="page-container">
         <div class="main">
           <!-- --------------------------------------------- HERO START --------------------------------------------- -->
-          <div class="hero">
-            <div class="container">
+          <div class="hero d-none d-sm-block">
+            <div class="container-fluid">
               <div class="row">
                 <div class="col-8">
                   <h1>$100 billion market cap after stellar 2018 end</h1>
@@ -73,14 +73,14 @@
           <div class="blog-posts mt-2">
             <div class="blog-post">
               <div class="blog-img">
-                <img src="./assets/vector/img-placeholder-lg.svg" alt="image" />
+                <img src="./assets/img/img-placeholder-lg.png" alt="image" />
               </div>
               <div class="blog-text">
                 <h3 class="lh-30">
                   Tcs edges closer to $100 billion market cap after stellar 2018
                   end to business alies
                 </h3>
-                <p class="lh-28 fs-18 ws-1">
+                <p class="lh-28 fs-18 ws-1 mt-3">
                   Also, issuer companies will have to strictly monitor the
                   activities of their RTAs. In case, share transfer agent
                   activities are carried out in-house.The overall revenue of the
@@ -88,7 +88,13 @@
                   and this quarter …
                 </p>
                 <div
-                  class="foot d-flex justify-content-between align-items-center"
+                  class="
+                    foot
+                    d-flex
+                    justify-content-between
+                    align-items-center
+                    mt-2
+                  "
                 >
                   <h5>
                     01 MAR 2018
@@ -105,7 +111,7 @@
                     <span class="action d-flex align-items-center">
                       <img src="./assets/vector/bookmark.svg" alt="bookmark" />
                     </span>
-                    <span class="ms-5 action d-flex align-items-center">
+                    <span class="ms-4 action d-flex align-items-center">
                       <img src="./assets/vector/comment.svg" alt="comment" />
                       <h5 class="d-inline fw-normal ms-1">23</h5>
                     </span>
@@ -115,14 +121,14 @@
             </div>
             <div class="blog-post">
               <div class="blog-img">
-                <img src="./assets/vector/img-placeholder-lg.svg" alt="image" />
+                <img src="./assets/img/img-placeholder-lg.png" alt="image" />
               </div>
               <div class="blog-text">
                 <h3 class="lh-30">
                   Tcs edges closer to $100 billion market cap after stellar 2018
                   end to business alies
                 </h3>
-                <p class="lh-28 fs-18 ws-1">
+                <p class="lh-28 fs-18 ws-1 mt-3">
                   Also, issuer companies will have to strictly monitor the
                   activities of their RTAs. In case, share transfer agent
                   activities are carried out in-house.The overall revenue of the
@@ -130,7 +136,13 @@
                   and this quarter …
                 </p>
                 <div
-                  class="foot d-flex justify-content-between align-items-center"
+                  class="
+                    foot
+                    d-flex
+                    justify-content-between
+                    align-items-center
+                    mt-2
+                  "
                 >
                   <h5>
                     01 MAR 2018
@@ -147,7 +159,7 @@
                     <span class="action d-flex align-items-center">
                       <img src="./assets/vector/bookmark.svg" alt="bookmark" />
                     </span>
-                    <span class="ms-5 action d-flex align-items-center">
+                    <span class="ms-4 action d-flex align-items-center">
                       <img src="./assets/vector/comment.svg" alt="comment" />
                       <h5 class="d-inline fw-normal ms-1">23</h5>
                     </span>
@@ -157,14 +169,14 @@
             </div>
             <div class="blog-post">
               <div class="blog-img">
-                <img src="./assets/vector/img-placeholder-lg.svg" alt="image" />
+                <img src="./assets/img/img-placeholder-lg.png" alt="image" />
               </div>
               <div class="blog-text">
                 <h3 class="lh-30">
                   Tcs edges closer to $100 billion market cap after stellar 2018
                   end to business alies
                 </h3>
-                <p class="lh-28 fs-18 ws-1">
+                <p class="lh-28 fs-18 ws-1 mt-3">
                   Also, issuer companies will have to strictly monitor the
                   activities of their RTAs. In case, share transfer agent
                   activities are carried out in-house.The overall revenue of the
@@ -172,7 +184,13 @@
                   and this quarter …
                 </p>
                 <div
-                  class="foot d-flex justify-content-between align-items-center"
+                  class="
+                    foot
+                    d-flex
+                    justify-content-between
+                    align-items-center
+                    mt-2
+                  "
                 >
                   <h5>
                     01 MAR 2018
@@ -189,7 +207,7 @@
                     <span class="action d-flex align-items-center">
                       <img src="./assets/vector/bookmark.svg" alt="bookmark" />
                     </span>
-                    <span class="ms-5 action d-flex align-items-center">
+                    <span class="ms-4 action d-flex align-items-center">
                       <img src="./assets/vector/comment.svg" alt="comment" />
                       <h5 class="d-inline fw-normal ms-1">23</h5>
                     </span>
@@ -199,14 +217,14 @@
             </div>
             <div class="blog-post">
               <div class="blog-img">
-                <img src="./assets/vector/img-placeholder-lg.svg" alt="image" />
+                <img src="./assets/img/img-placeholder-lg.png" alt="image" />
               </div>
               <div class="blog-text">
                 <h3 class="lh-30">
                   Tcs edges closer to $100 billion market cap after stellar 2018
                   end to business alies
                 </h3>
-                <p class="lh-28 fs-18 ws-1">
+                <p class="lh-28 fs-18 ws-1 mt-3">
                   Also, issuer companies will have to strictly monitor the
                   activities of their RTAs. In case, share transfer agent
                   activities are carried out in-house.The overall revenue of the
@@ -214,7 +232,13 @@
                   and this quarter …
                 </p>
                 <div
-                  class="foot d-flex justify-content-between align-items-center"
+                  class="
+                    foot
+                    d-flex
+                    justify-content-between
+                    align-items-center
+                    mt-2
+                  "
                 >
                   <h5>
                     01 MAR 2018
@@ -231,7 +255,7 @@
                     <span class="action d-flex align-items-center">
                       <img src="./assets/vector/bookmark.svg" alt="bookmark" />
                     </span>
-                    <span class="ms-5 action d-flex align-items-center">
+                    <span class="ms-4 action d-flex align-items-center">
                       <img src="./assets/vector/comment.svg" alt="comment" />
                       <h5 class="d-inline fw-normal ms-1">23</h5>
                     </span>
@@ -241,14 +265,14 @@
             </div>
             <div class="blog-post">
               <div class="blog-img">
-                <img src="./assets/vector/img-placeholder-lg.svg" alt="image" />
+                <img src="./assets/img/img-placeholder-lg.png" alt="image" />
               </div>
               <div class="blog-text">
                 <h3 class="lh-30">
                   Tcs edges closer to $100 billion market cap after stellar 2018
                   end to business alies
                 </h3>
-                <p class="lh-28 fs-18 ws-1">
+                <p class="lh-28 fs-18 ws-1 mt-3">
                   Also, issuer companies will have to strictly monitor the
                   activities of their RTAs. In case, share transfer agent
                   activities are carried out in-house.The overall revenue of the
@@ -256,7 +280,13 @@
                   and this quarter …
                 </p>
                 <div
-                  class="foot d-flex justify-content-between align-items-center"
+                  class="
+                    foot
+                    d-flex
+                    justify-content-between
+                    align-items-center
+                    mt-2
+                  "
                 >
                   <h5>
                     01 MAR 2018
@@ -273,7 +303,7 @@
                     <span class="action d-flex align-items-center">
                       <img src="./assets/vector/bookmark.svg" alt="bookmark" />
                     </span>
-                    <span class="ms-5 action d-flex align-items-center">
+                    <span class="ms-4 action d-flex align-items-center">
                       <img src="./assets/vector/comment.svg" alt="comment" />
                       <h5 class="d-inline fw-normal ms-1">23</h5>
                     </span>
@@ -283,14 +313,14 @@
             </div>
             <div class="blog-post">
               <div class="blog-img">
-                <img src="./assets/vector/img-placeholder-lg.svg" alt="image" />
+                <img src="./assets/img/img-placeholder-lg.png" alt="image" />
               </div>
               <div class="blog-text">
                 <h3 class="lh-30">
                   Tcs edges closer to $100 billion market cap after stellar 2018
                   end to business alies
                 </h3>
-                <p class="lh-28 fs-18 ws-1">
+                <p class="lh-28 fs-18 ws-1 mt-3">
                   Also, issuer companies will have to strictly monitor the
                   activities of their RTAs. In case, share transfer agent
                   activities are carried out in-house.The overall revenue of the
@@ -298,7 +328,13 @@
                   and this quarter …
                 </p>
                 <div
-                  class="foot d-flex justify-content-between align-items-center"
+                  class="
+                    foot
+                    d-flex
+                    justify-content-between
+                    align-items-center
+                    mt-2
+                  "
                 >
                   <h5>
                     01 MAR 2018
@@ -315,7 +351,7 @@
                     <span class="action d-flex align-items-center">
                       <img src="./assets/vector/bookmark.svg" alt="bookmark" />
                     </span>
-                    <span class="ms-5 action d-flex align-items-center">
+                    <span class="ms-4 action d-flex align-items-center">
                       <img src="./assets/vector/comment.svg" alt="comment" />
                       <h5 class="d-inline fw-normal ms-1">23</h5>
                     </span>
@@ -395,7 +431,16 @@
 
       <section
         id="suggestions"
-        class="page-container explore bottom d-block d-lg-none pb-5 mb-5"
+        class="
+          page-container
+          explore
+          bottom
+          d-block d-lg-none
+          pb-5
+          mt-5
+          mb-5
+          blogs
+        "
       >
         <div class="container-fluid">
           <div class="row">
