--- a/notifications.html
+++ b/notifications.html
@@ -20,7 +20,7 @@
   <body>
     <!-- --------------------------------------------- NAVBAR START --------------------------------------------- -->
 
-    <nav id="navbar-sm">
+    <nav id="navbar-sm" class="notification-navbar sm d-none d-md-block">
       <div>
         <a href="#" class="logo">
           <img src="./assets/vector/logo.svg" alt="logo" />
@@ -403,17 +403,23 @@
     <!-- --------------------------------------------- MAIN START --------------------------------------------- -->
 
     <main>
-      <section id="notifications" class="page-container lg d-block">
+      <section
+        id="notifications"
+        class="page-container no-padding lg d-block pt-3 pt-md-0"
+      >
         <div class="head">
-          <div class="text">
-            <h2>All Notifications</h2>
-            <h4 class="text-light-2 fs-18 mt-2">
+          <div class="text ps-4 ps-sm-0">
+            <h2 class="fs-1366-24">
+              <img src="./assets/vector/back-arrow.svg" alt="arrow" /> All
+              Notifications
+            </h2>
+            <h4 class="text-light-2 fs-18 fs-1366-14 mt-2">
               You Have 03 Unread Messages.
             </h4>
           </div>
           <div>
             <button class="btn p-0">
-              <h4 class="fs-18 fw-normal">Mark All As Read</h4>
+              <h4 class="fs-18 fs-1366-14 fw-normal">Mark All As Read</h4>
             </button>
           </div>
         </div>
@@ -438,12 +444,14 @@
             </svg>
 
             <div class="text">
-              <h4 class="fw-normal fs-18">All Funds Running On Track.</h4>
-              <h5 class="text-light-2 mt-2">24 OCT 2021</h5>
+              <h4 class="fw-normal fs-18 fs-1366-14">
+                All Funds Running On Track.
+              </h4>
+              <h5 class="text-light-2">24 OCT 2021</h5>
             </div>
             <div class="action">
-              <button class="btn btn-bg-light w-100px px-0 text-center">
-                <span class="text-light-2 fs-17">Action</span>
+              <button class="btn btn-bg-light w-100px w-80px px-0 text-center">
+                <span class="text-light-2 fs-17 fs-1366-14">Action</span>
               </button>
             </div>
           </div>
@@ -464,14 +472,14 @@
             </svg>
 
             <div class="text">
-              <h4 class="fw-normal fs-18">
+              <h4 class="fw-normal fs-18 fs-1366-14">
                 Add Your EPF Account To Achieve Your Goals Faster.
               </h4>
-              <h5 class="text-light-2 mt-2">24 OCT 2021</h5>
+              <h5 class="text-light-2">24 OCT 2021</h5>
             </div>
             <div class="action">
-              <button class="btn btn-bg-light w-100px px-0 text-center">
-                <span class="text-light-2 fs-17">Action</span>
+              <button class="btn btn-bg-light w-100px w-80px px-0 text-center">
+                <span class="text-light-2 fs-17 fs-1366-14">Action</span>
               </button>
             </div>
           </div>
@@ -492,12 +500,14 @@
             </svg>
 
             <div class="text">
-              <h4 class="fw-normal fs-18">All Funds Running On Track.</h4>
-              <h5 class="text-light-2 mt-2">24 OCT 2021</h5>
+              <h4 class="fw-normal fs-18 fs-1366-14">
+                All Funds Running On Track.
+              </h4>
+              <h5 class="text-light-2">24 OCT 2021</h5>
             </div>
             <div class="action">
-              <button class="btn btn-bg-light w-100px px-0 text-center">
-                <span class="text-light-2 fs-17">Action</span>
+              <button class="btn btn-bg-light w-100px w-80px px-0 text-center">
+                <span class="text-light-2 fs-17 fs-1366-14">Action</span>
               </button>
             </div>
           </div>
@@ -518,12 +528,14 @@
             </svg>
 
             <div class="text">
-              <h4 class="fw-normal fs-18">All Funds Running On Track.</h4>
-              <h5 class="text-light-2 mt-2">24 OCT 2021</h5>
+              <h4 class="fw-normal fs-18 fs-1366-14">
+                All Funds Running On Track.
+              </h4>
+              <h5 class="text-light-2">24 OCT 2021</h5>
             </div>
             <div class="action">
-              <button class="btn btn-bg-light w-100px px-0 text-center">
-                <span class="text-light-2 fs-17">Action</span>
+              <button class="btn btn-bg-light w-100px w-80px px-0 text-center">
+                <span class="text-light-2 fs-17 fs-1366-14">Action</span>
               </button>
             </div>
           </div>
@@ -544,12 +556,14 @@
             </svg>
 
             <div class="text">
-              <h4 class="fw-normal fs-18">All Funds Running On Track.</h4>
-              <h5 class="text-light-2 mt-2">24 OCT 2021</h5>
+              <h4 class="fw-normal fs-18 fs-1366-14">
+                All Funds Running On Track.
+              </h4>
+              <h5 class="text-light-2">24 OCT 2021</h5>
             </div>
             <div class="action">
-              <button class="btn btn-bg-light w-100px px-0 text-center">
-                <span class="text-light-2 fs-17">Action</span>
+              <button class="btn btn-bg-light w-100px w-80px px-0 text-center">
+                <span class="text-light-2 fs-17 fs-1366-14">Action</span>
               </button>
             </div>
           </div>
@@ -570,12 +584,14 @@
             </svg>
 
             <div class="text">
-              <h4 class="fw-normal fs-18">All Funds Running On Track.</h4>
-              <h5 class="text-light-2 mt-2">24 OCT 2021</h5>
+              <h4 class="fw-normal fs-18 fs-1366-14">
+                All Funds Running On Track.
+              </h4>
+              <h5 class="text-light-2">24 OCT 2021</h5>
             </div>
             <div class="action">
-              <button class="btn btn-bg-light w-100px px-0 text-center">
-                <span class="text-light-2 fs-17">Action</span>
+              <button class="btn btn-bg-light w-100px w-80px px-0 text-center">
+                <span class="text-light-2 fs-17 fs-1366-14">Action</span>
               </button>
             </div>
           </div>
@@ -596,12 +612,14 @@
             </svg>
 
             <div class="text">
-              <h4 class="fw-normal fs-18">All Funds Running On Track.</h4>
-              <h5 class="text-light-2 mt-2">24 OCT 2021</h5>
+              <h4 class="fw-normal fs-18 fs-1366-14">
+                All Funds Running On Track.
+              </h4>
+              <h5 class="text-light-2">24 OCT 2021</h5>
             </div>
             <div class="action">
-              <button class="btn btn-bg-light w-100px px-0 text-center">
-                <span class="text-light-2 fs-17">Action</span>
+              <button class="btn btn-bg-light w-100px w-80px px-0 text-center">
+                <span class="text-light-2 fs-17 fs-1366-14">Action</span>
               </button>
             </div>
           </div>
@@ -622,12 +640,14 @@
             </svg>
 
             <div class="text">
-              <h4 class="fw-normal fs-18">All Funds Running On Track.</h4>
-              <h5 class="text-light-2 mt-2">24 OCT 2021</h5>
+              <h4 class="fw-normal fs-18 fs-1366-14">
+                All Funds Running On Track.
+              </h4>
+              <h5 class="text-light-2">24 OCT 2021</h5>
             </div>
             <div class="action">
-              <button class="btn btn-bg-light w-100px px-0 text-center">
-                <span class="text-light-2 fs-17">Action</span>
+              <button class="btn btn-bg-light w-100px w-80px px-0 text-center">
+                <span class="text-light-2 fs-17 fs-1366-14">Action</span>
               </button>
             </div>
           </div>
@@ -648,15 +668,18 @@
             </svg>
 
             <div class="text">
-              <h4 class="fw-normal fs-18">All Funds Running On Track.</h4>
-              <h5 class="text-light-2 mt-2">24 OCT 2021</h5>
+              <h4 class="fw-normal fs-18 fs-1366-14">
+                All Funds Running On Track.
+              </h4>
+              <h5 class="text-light-2">24 OCT 2021</h5>
             </div>
             <div class="action">
-              <button class="btn btn-bg-light w-100px px-0 text-center">
-                <span class="text-light-2 fs-17">Action</span>
+              <button class="btn btn-bg-light w-100px w-80px px-0 text-center">
+                <span class="text-light-2 fs-17 fs-1366-14">Action</span>
               </button>
             </div>
           </div>
+        </div>
       </section>
     </main>
 
