--- a/refer-and-invest.html
+++ b/refer-and-invest.html
@@ -136,7 +136,7 @@
               </g>
             </svg>
 
-            <h4 class="fs-18 fw-normal">Profile</h4>
+            <h4 class="fs-18 fs-1366-14 fw-normal">Profile</h4>
           </a>
           <a href="#" class="nav-item">
             <svg
@@ -212,7 +212,7 @@
               </g>
             </svg>
 
-            <h4 class="fs-18 fw-normal">Transactions</h4>
+            <h4 class="fs-18 fs-1366-14 fw-normal">Transactions</h4>
           </a>
           <a href="#" class="nav-item active">
             <svg
@@ -300,7 +300,7 @@
               </g>
             </svg>
 
-            <h4 class="fs-18 fw-normal">Refer And Invest</h4>
+            <h4 class="fs-18 fs-1366-14 fw-normal">Refer And Invest</h4>
           </a>
           <a href="#" class="nav-item">
             <svg
@@ -370,7 +370,7 @@
               </g>
             </svg>
 
-            <h4 class="fs-18 fw-normal">Sign Out</h4>
+            <h4 class="fs-18 fs-1366-14 fw-normal">Sign Out</h4>
           </a>
           <a href="#" class="nav-item help">
             <svg
@@ -440,7 +440,7 @@
               </g>
             </svg>
 
-            <h4 class="fs-18 fw-normal">Help &amp; Product Tour</h4>
+            <h4 class="fs-18 fs-1366-14 fw-normal">Help &amp; Product Tour</h4>
           </a>
         </div>
       </nav>
