--- a/transactions.html
+++ b/transactions.html
@@ -136,7 +136,7 @@
               </g>
             </svg>
 
-            <h4 class="fs-18 fw-normal">Profile</h4>
+            <h4 class="fs-18 fs-1366-14 fw-normal">Profile</h4>
           </a>
           <a href="#" class="nav-item active">
             <svg
@@ -212,7 +212,7 @@
               </g>
             </svg>
 
-            <h4 class="fs-18 fw-normal">Transactions</h4>
+            <h4 class="fs-18 fs-1366-14 fw-normal">Transactions</h4>
           </a>
           <a href="#" class="nav-item">
             <svg
@@ -300,7 +300,7 @@
               </g>
             </svg>
 
-            <h4 class="fs-18 fw-normal">Refer And Invest</h4>
+            <h4 class="fs-18 fs-1366-14 fw-normal">Refer And Invest</h4>
           </a>
           <a href="#" class="nav-item">
             <svg
@@ -370,7 +370,7 @@
               </g>
             </svg>
 
-            <h4 class="fs-18 fw-normal">Sign Out</h4>
+            <h4 class="fs-18 fs-1366-14 fw-normal">Sign Out</h4>
           </a>
           <a href="#" class="nav-item help">
             <svg
@@ -440,7 +440,7 @@
               </g>
             </svg>
 
-            <h4 class="fs-18 fw-normal">Help &amp; Product Tour</h4>
+            <h4 class="fs-18 fs-1366-14 fw-normal">Help &amp; Product Tour</h4>
           </a>
         </div>
       </nav>
@@ -449,9 +449,11 @@
 
       <!-- --------------------------------------------- MAIN START --------------------------------------------- -->
 
-      <main id="sidenav-right-content">
+      <main id="sidenav-right-content" class="transactions-sidenav-right">
         <section id="transactions">
-          <h2>All Transactions</h2>
+          <h2 class="title">
+            <img src="./assets/vector/back-arrow.svg" alt="" /> All Transactions
+          </h2>
 
           <div
             class="
@@ -459,11 +461,12 @@
               d-flex
               justify-content-between
               align-items-center
-              mt-4
+              mt-lg-4 mt-2
+              ms-2
             "
           >
             <h5 class="text-light-2">02 MAR 2021</h5>
-            <div class="d-flex">
+            <div class="d-none d-lg-flex">
               <div class="custom-form-control search-sm">
                 <input
                   class="custom-input"
@@ -492,23 +495,27 @@
                   <img src="./assets/images/bank_logo.svg" alt="logo" />
                 </div>
                 <div class="text ms-3">
-                  <h4 class="fs-18 fw-normal">
+                  <h4 class="fs-18 fs-1366-14 fw-normal">
                     ICICI Prudential Savings Fund (G)
                   </h4>
-                  <h5 class="text-light-2 mt-1">24 oct 2021, 05:30 pm</h5>
+                  <h5 class="text-light-2 fs-1366-12 mt-1">
+                    24 oct 2021, 05:30 pm
+                  </h5>
                 </div>
               </div>
               <div>
                 <div class="invest">
-                  <h4 class="text-light-2 fw-normal">INVEST</h4>
+                  <h4 class="text-light-2 fs-1366-14 fw-normal">INVEST</h4>
                 </div>
                 <div class="funds">
-                  <h4 class="text-light-2 fw-normal">MUTUAL FUNDS</h4>
+                  <h4 class="text-light-2 fs-1366-14 fw-normal">
+                    MUTUAL FUNDS
+                  </h4>
                 </div>
               </div>
               <div>
                 <div class="amount">
-                  <h3 class="fw-normal">₹4,780</h3>
+                  <h3 class="fw-normal fs-1366-18">₹4,780</h3>
                 </div>
                 <div class="status">
                   <button class="btn btn-outlined green">Success</button>
@@ -526,23 +533,27 @@
                   <img src="./assets/images/bank_logo-2.svg" alt="logo" />
                 </div>
                 <div class="text ms-3">
-                  <h4 class="fs-18 fw-normal">
+                  <h4 class="fs-18 fw-normal fs-1366-14">
                     L&T Emerging Businesses Growth…
                   </h4>
-                  <h5 class="text-light-2 mt-1">24 oct 2021, 05:30 pm</h5>
+                  <h5 class="text-light-2 fs-1366-12 mt-1">
+                    24 oct 2021, 05:30 pm
+                  </h5>
                 </div>
               </div>
               <div>
                 <div class="invest">
-                  <h4 class="text-light-2 fw-normal">INVEST</h4>
+                  <h4 class="text-light-2 fs-1366-14 fw-normal">INVEST</h4>
                 </div>
                 <div class="funds">
-                  <h4 class="text-light-2 fw-normal">MUTUAL FUNDS</h4>
+                  <h4 class="text-light-2 fs-1366-14 fw-normal">
+                    MUTUAL FUNDS
+                  </h4>
                 </div>
               </div>
               <div>
                 <div class="amount">
-                  <h3 class="fw-normal">₹21,632</h3>
+                  <h3 class="fw-normal fs-1366-18">₹21,632</h3>
                 </div>
                 <div class="status">
                   <button class="btn btn-outlined red">Unsuccess</button>
@@ -560,23 +571,27 @@
                   <img src="./assets/images/bank_logo.svg" alt="logo" />
                 </div>
                 <div class="text ms-3">
-                  <h4 class="fs-18 fw-normal">
+                  <h4 class="fs-18 fw-normal fs-1366-14">
                     ICICI Prudential Savings Fund (G)
                   </h4>
-                  <h5 class="text-light-2 mt-1">24 oct 2021, 05:30 pm</h5>
+                  <h5 class="text-light-2 fs-1366-12 mt-1">
+                    24 oct 2021, 05:30 pm
+                  </h5>
                 </div>
               </div>
               <div>
                 <div class="invest">
-                  <h4 class="text-light-2 fw-normal">WITHDRAW</h4>
+                  <h4 class="text-light-2 fs-1366-14 fw-normal">WITHDRAW</h4>
                 </div>
                 <div class="funds">
-                  <h4 class="text-light-2 fw-normal">MUTUAL FUNDS</h4>
+                  <h4 class="text-light-2 fs-1366-14 fw-normal">
+                    MUTUAL FUNDS
+                  </h4>
                 </div>
               </div>
               <div>
                 <div class="amount">
-                  <h3 class="fw-normal">-₹7,560</h3>
+                  <h3 class="fw-normal fs-1366-18">-₹7,560</h3>
                 </div>
                 <div class="status">
                   <button class="btn btn-outlined red">Unsuccess</button>
@@ -594,23 +609,27 @@
                   <img src="./assets/images/bank_logo.svg" alt="logo" />
                 </div>
                 <div class="text ms-3">
-                  <h4 class="fs-18 fw-normal">
+                  <h4 class="fs-18 fw-normal fs-1366-14">
                     ICICI Prudential Savings Fund (G)
                   </h4>
-                  <h5 class="text-light-2 mt-1">24 oct 2021, 05:30 pm</h5>
+                  <h5 class="text-light-2 fs-1366-12 mt-1">
+                    24 oct 2021, 05:30 pm
+                  </h5>
                 </div>
               </div>
               <div>
                 <div class="invest">
-                  <h4 class="text-light-2 fw-normal">INVEST</h4>
+                  <h4 class="text-light-2 fs-1366-14 fw-normal">INVEST</h4>
                 </div>
                 <div class="funds">
-                  <h4 class="text-light-2 fw-normal">MUTUAL FUNDS</h4>
+                  <h4 class="text-light-2 fs-1366-14 fw-normal">
+                    MUTUAL FUNDS
+                  </h4>
                 </div>
               </div>
               <div>
                 <div class="amount">
-                  <h3 class="fw-normal">₹5,000</h3>
+                  <h3 class="fw-normal fs-1366-18">₹5,000</h3>
                 </div>
                 <div class="status">
                   <button class="btn btn-outlined green">Success</button>
@@ -628,23 +647,27 @@
                   <img src="./assets/images/bank_logo.svg" alt="logo" />
                 </div>
                 <div class="text ms-3">
-                  <h4 class="fs-18 fw-normal">
+                  <h4 class="fs-18 fw-normal fs-1366-14">
                     ICICI Prudential Savings Fund (G)
                   </h4>
-                  <h5 class="text-light-2 mt-1">24 oct 2021, 05:30 pm</h5>
+                  <h5 class="text-light-2 fs-1366-12 mt-1">
+                    24 oct 2021, 05:30 pm
+                  </h5>
                 </div>
               </div>
               <div>
                 <div class="invest">
-                  <h4 class="text-light-2 fw-normal">INVEST</h4>
+                  <h4 class="text-light-2 fs-1366-14 fw-normal">INVEST</h4>
                 </div>
                 <div class="funds">
-                  <h4 class="text-light-2 fw-normal">MUTUAL FUNDS</h4>
+                  <h4 class="text-light-2 fs-1366-14 fw-normal">
+                    MUTUAL FUNDS
+                  </h4>
                 </div>
               </div>
               <div>
                 <div class="amount">
-                  <h3 class="fw-normal">₹5,000</h3>
+                  <h3 class="fw-normal fs-1366-18">₹5,000</h3>
                 </div>
                 <div class="status">
                   <button class="btn btn-outlined green">Success</button>
@@ -662,23 +685,27 @@
                   <img src="./assets/images/bank_logo.svg" alt="logo" />
                 </div>
                 <div class="text ms-3">
-                  <h4 class="fs-18 fw-normal">
+                  <h4 class="fs-18 fw-normal fs-1366-14">
                     ICICI Prudential Savings Fund (G)
                   </h4>
-                  <h5 class="text-light-2 mt-1">24 oct 2021, 05:30 pm</h5>
+                  <h5 class="text-light-2 fs-1366-12 mt-1">
+                    24 oct 2021, 05:30 pm
+                  </h5>
                 </div>
               </div>
               <div>
                 <div class="invest">
-                  <h4 class="text-light-2 fw-normal">INVEST</h4>
+                  <h4 class="text-light-2 fs-1366-14 fw-normal">INVEST</h4>
                 </div>
                 <div class="funds">
-                  <h4 class="text-light-2 fw-normal">MUTUAL FUNDS</h4>
+                  <h4 class="text-light-2 fs-1366-14 fw-normal">
+                    MUTUAL FUNDS
+                  </h4>
                 </div>
               </div>
               <div>
                 <div class="amount">
-                  <h3 class="fw-normal">-₹20,000</h3>
+                  <h3 class="fw-normal fs-1366-18">-₹20,000</h3>
                 </div>
                 <div class="status">
                   <button class="btn btn-outlined yellow">Pending</button>
@@ -696,23 +723,27 @@
                   <img src="./assets/images/bank_logo-3.svg" alt="logo" />
                 </div>
                 <div class="text ms-3">
-                  <h4 class="fs-18 fw-normal">
+                  <h4 class="fs-18 fw-normal fs-1366-14">
                     HDFC Banking And Financial Services…
                   </h4>
-                  <h5 class="text-light-2 mt-1">24 oct 2021, 05:30 pm</h5>
+                  <h5 class="text-light-2 fs-1366-12 mt-1">
+                    24 oct 2021, 05:30 pm
+                  </h5>
                 </div>
               </div>
               <div>
                 <div class="invest">
-                  <h4 class="text-light-2 fw-normal">WITHDRAW</h4>
+                  <h4 class="text-light-2 fs-1366-14 fw-normal">WITHDRAW</h4>
                 </div>
                 <div class="funds">
-                  <h4 class="text-light-2 fw-normal">FIXED DEPOSITS</h4>
+                  <h4 class="text-light-2 fs-1366-14 fw-normal">
+                    FIXED DEPOSITS
+                  </h4>
                 </div>
               </div>
               <div>
                 <div class="amount">
-                  <h3 class="fw-normal">₹5,000</h3>
+                  <h3 class="fw-normal fs-1366-18">₹5,000</h3>
                 </div>
                 <div class="status">
                   <button class="btn btn-outlined green">Success</button>
@@ -730,23 +761,27 @@
                   <img src="./assets/images/bank_logo.svg" alt="logo" />
                 </div>
                 <div class="text ms-3">
-                  <h4 class="fs-18 fw-normal">
+                  <h4 class="fs-18 fw-normal fs-1366-14">
                     ICICI Prudential Savings Fund (G)
                   </h4>
-                  <h5 class="text-light-2 mt-1">24 oct 2021, 05:30 pm</h5>
+                  <h5 class="text-light-2 fs-1366-12 mt-1">
+                    24 oct 2021, 05:30 pm
+                  </h5>
                 </div>
               </div>
               <div>
                 <div class="invest">
-                  <h4 class="text-light-2 fw-normal">INVEST</h4>
+                  <h4 class="text-light-2 fs-1366-14 fw-normal">INVEST</h4>
                 </div>
                 <div class="funds">
-                  <h4 class="text-light-2 fw-normal">MUTUAL FUNDS</h4>
+                  <h4 class="text-light-2 fs-1366-14 fw-normal">
+                    MUTUAL FUNDS
+                  </h4>
                 </div>
               </div>
               <div>
                 <div class="amount">
-                  <h3 class="fw-normal">₹34,892</h3>
+                  <h3 class="fw-normal fs-1366-18">₹34,892</h3>
                 </div>
                 <div class="status">
                   <button class="btn btn-outlined green">Success</button>
