fixes side navbar

--- a/refer-and-invest.html
+++ b/refer-and-invest.html
@@ -461,15 +461,15 @@
               <div class="text">
                 <div class="sub-section">
                   <h4 class="text-light-2">SIGNED-UP REFERRAL</h4>
-                  <h1 class="fs-52 mt-2 fw-600">09</h1>
+                  <h1 class="fs-52 fs-1366-40 mt-2 fw-600">09</h1>
                 </div>
                 <div class="sub-section">
                   <h4 class="text-light-2">PENDING</h4>
-                  <h1 class="fs-52 mt-2 fw-600">01</h1>
+                  <h1 class="fs-52 fs-1366-40 mt-2 fw-600">01</h1>
                 </div>
                 <div class="sub-section">
                   <h4 class="text-light-2">TOTAL REWARDS</h4>
-                  <h1 class="fs-52 mt-2 fw-600">₹4,500</h1>
+                  <h1 class="fs-52 fs-1366-40 mt-2 fw-600">₹4,500</h1>
                 </div>
                 <div class="sub-section">
                   <button
@@ -486,13 +486,13 @@
               </div>
               <div class="text refer">
                 <div class="sub-section referral">
-                  <h4 class="text-light-2">MY REFERRAL</h4>
-                  <h3 class="fw-normal mt-4">
+                  <h4 class="text-light-2 fs-1366-14">MY REFERRAL</h4>
+                  <h3 class="fw-normal mt-4 fs-1366-18">
                     Share Your Promo Code. With A Friend And You Both Get ₹500.
                   </h3>
                 </div>
                 <div class="sub-section">
-                  <div class="copy fs-18">
+                  <div class="copy fs-18 fs-1366-14">
                     PALA2389
                     <img
                       class="copyer"
