--- a/transaction.html
+++ b/transaction.html
@@ -449,60 +449,78 @@
 
       <!-- --------------------------------------------- MAIN START --------------------------------------------- -->
 
-      <main id="sidenav-right-content">
+      <main id="sidenav-right-content" class="transactions-right">
         <section id="transaction">
           <a href="./transactions.html">
-            <h2>
+            <h2 class="ms-4 ms-sm-0">
               <img
                 class="back"
-                src="./assets/vector/arrow-left.svg"
+                src="./assets/vector/back-arrow.svg"
                 alt="arrow"
               />
               Back To Transactions
             </h2>
+            <h4 class="text-light-2 fs-14 d-block d-lg-none ms-4 ms-sm-0">
+              09 May 2021
+            </h4>
           </a>
 
-          <div class="transaction mt-5 pt-4">
+          <div class="transaction mt-5 pt-lg-4 pt-0">
             <div class="transaction-head">
               <div class="details">
-                <div class="logo me-3">
+                <div class="logo me-3 w-1366-48 w-768-32">
                   <img src="./assets/images/bank_logo.svg" alt="bank-logo" />
                 </div>
                 <div class="text">
-                  <h3 class="fw-normal">ICICI Prudential Savings Fund (G)</h3>
-                  <h4 class="fs-18 text-light-2">24 oct 2021, 05:30 pm</h4>
+                  <h3 class="fw-normal fs-1366-18">
+                    ICICI Prudential Savings Fund (G)
+                  </h3>
+                  <!-- d-none d-1366-block -->
+                  <h4 class="fs-14 text-light-2 mt-2">24 OCT 2021, 05:30 PM</h4>
                 </div>
               </div>
               <div class="invest">
                 <h4 class="text-light-2">INVEST</h4>
               </div>
               <div class="status">
-                <button class="btn btn-outlined green">Success</button>
+                <button
+                  class="btn btn-outlined green w-1366-80 w-768-72 px-0 py-1"
+                >
+                  <span class="fs-16 fs-1366-14 fs-768-12">Success</span>
+                </button>
               </div>
               <div class="amount">
-                <h1 class="fw-normal">₹4,780</h1>
+                <h2 class="fw-normal">₹4,780</h2>
               </div>
             </div>
             <div class="transaction-body">
               <div class="type">
-                <h4 class="text-light-2 mb-3">TYPE</h4>
-                <h3 class="fs-20 fw-normal">MUTUAL FUND</h3>
+                <h4 class="text-light-2 fs-1366-14">TYPE</h4>
+                <h3 class="fs-20 fw-normal fs-1366-14 fs-768-16">
+                  MUTUAL FUND
+                </h3>
               </div>
               <div class="units">
-                <h4 class="text-light-2 mb-3">UNITS</h4>
-                <h3 class="fs-20 fw-normal">394</h3>
+                <h4 class="text-light-2 fs-1366-14">UNITS</h4>
+                <h3 class="fs-20 fw-normal fs-1366-14 fs-768-16">394</h3>
               </div>
               <div class="nav-date">
-                <h4 class="text-light-2 mb-3">NAV DATE</h4>
-                <h3 class="fs-20 fw-normal">09 MAY 2021</h3>
+                <h4 class="text-light-2 fs-1366-14">NAV DATE</h4>
+                <h3 class="fs-20 fw-normal fs-1366-14 fs-768-16">
+                  09 MAY 2021
+                </h3>
               </div>
               <div class="folio">
-                <h4 class="text-light-2 mb-3">FOLIO</h4>
-                <h3 class="fs-20 fw-normal">577321640866</h3>
+                <h4 class="text-light-2 fs-1366-14">FOLIO</h4>
+                <h3 class="fs-20 fw-normal fs-1366-14 fs-768-16">
+                  577321640866
+                </h3>
               </div>
               <div class="tid">
-                <h4 class="text-light-2 mb-3">TRANSACTION ID</h4>
-                <h3 class="fs-20 fw-normal">PN38462H3HHS6</h3>
+                <h4 class="text-light-2 fs-1366-14">TRANSACTION ID</h4>
+                <h3 class="fs-20 fw-normal fs-1366-14 fs-768-16">
+                  PN38462H3HHS6
+                </h3>
               </div>
             </div>
           </div>
