--- a/transactions.html
+++ b/transactions.html
@@ -451,21 +451,23 @@
 
       <main id="sidenav-right-content" class="transactions-sidenav-right">
         <section id="transactions">
-          <h2 class="title">
-            <img src="./assets/vector/back-arrow.svg" alt="" /> All Transactions
-          </h2>
+          <div class="title">
+            <h2>
+              <img src="./assets/vector/back-arrow.svg" alt="" /> All
+              Transactions
+            </h2>
 
-          <div
-            class="
-              transactions-head
-              d-flex
-              justify-content-between
-              align-items-center
-              mt-lg-4 mt-2
-              ms-2
-            "
-          >
-            <h5 class="text-light-2">02 MAR 2021</h5>
+            <div
+              class="
+                transactions-head
+                d-flex
+                justify-content-between
+                align-items-center
+                mt-lg-4 mt-2
+              "
+            >
+              <h5 class="text-light-2">02 MAR 2021</h5>
+            </div>
             <div class="d-none d-lg-flex">
               <div class="custom-form-control search-sm">
                 <input
